send otp & forgot pass

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=datingapp
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=thanghoctoeic@gmail.com
+spring.mail.password=rpvm cnqq oodc ligu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.ss.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
