--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>2.8.5</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>3.4.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
