--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,13 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=
 spring.data.redis.timeout=60000
+
+spring.security.oauth2.client.registration.google.client-id=1004613435852-3l74r666g9so3f6c8ia2j1usik2ml2sd.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
